--- a/flink-basic/pom.xml
+++ b/flink-basic/pom.xml
@@ -5,12 +5,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.qq.welink.project</groupId>
-  <artifactId>my-flink-in-action</artifactId>
+  <artifactId>flink-basic</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>data-clean</module>
-    </modules>
 
     <name>myflinkdemo</name>
   <!-- FIXME change it to the project's website -->
