--- a/flink-basic/pom.xml
+++ b/flink-basic/pom.xml
@@ -76,6 +76,12 @@
       <version>1.8.0-beta4</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.5</version>
+    </dependency>
+
 
 
 
