--- a/flink-basic/pom.xml
+++ b/flink-basic/pom.xml
@@ -81,6 +81,12 @@
       <version>2.8.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>2.1.1</version>
+    </dependency>
+
 
 
   </dependencies>
