--- a/flink-basic/pom.xml
+++ b/flink-basic/pom.xml
@@ -87,6 +87,12 @@
       <version>2.1.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-jdbc_2.12</artifactId>
+      <version>${flink.version}</version>
+    </dependency>
+
 
 
   </dependencies>
